--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <meta name="rating" content="General">
     <meta name="revisit-after" content="7 days">
     <meta http-equiv="Expires" content="0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
    <!-- mobile specific metas
    ================================================== -->
